Fixed "sign up" form display on mobile

--- a/source/style.styl
+++ b/source/style.styl
@@ -128,11 +128,12 @@ body.landing-page
 
   .signup
     margin: 30px -15px 0 -15px
-    padding: 30px 0 30px 0
+    padding: 30px 15px 30px 15px
     text-align: center
     background-color: #EDEFF3
     input, button
-      margin: 0 10px
+      margin: 10px 0
+      max-width: 100%
       height: 2.4em
       font-size: 1.2em
     button
